# cordial

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  project.yml
cordial/: main.cpp  prueba.cord
cordial/bytecode/includes/: OpCodes.hpp  bcprogram.hpp  vm.hpp
cordial/bytecode/src/: OpCodes.cpp  bcprogram.cpp  vm.cpp
cordial/language/: utils.hpp
cordial/language/includes/: asm_generator.hpp  ast.hpp  ast_dump.h  bc_generator.hpp  interpreter.hpp  lexer.hpp  parser.hpp  semantics.hpp  simbolo.hpp  symbol.hpp  token.hpp  utils.hpp  valor.hpp
cordial/language/src/: asm_generator.cpp  ast.cpp  ast_dump.cpp  bc_generator.cpp  interpreter.cpp  lexer.cpp  parser.cpp  semantics.cpp  simbolo.cpp  symbol.cpp  token.cpp  valor.cpp
ejemplos/: hola.cord
src/: execution.rs  lexer.rs  main.rs  parser.rs  preprocessing.rs
